New Excel extractor